@@ -1442,7 +1442,7 @@
 # Generated by RobOptim core library 0.2
 set terminal wxt persist
 set multiplot layout 2,2
-plot '-' with line
+plot '-' title 'x * x' with line
 -100.000000 10000.000000
 -99.000000 9801.000000
 -98.000000 9604.000000
@@ -1645,7 +1645,7 @@ plot '-' with line
 99.000000 9801.000000
 e
 
-plot '-' with line
+plot '-' title '' with line
 -100.000000 10000.000000
 -99.000000 9801.000000
 -98.000000 9604.000000
@@ -1848,7 +1848,7 @@ plot '-' with line
 99.000000 9801.000000
 e
 
-plot '-' with line
+plot '-' title '' with line
 -100.000000 -243295.000000
 -99.000000 -238486.000000
 -98.000000 -233725.000000
@@ -2051,7 +2051,7 @@ plot '-' with line
 99.000000 -231952.000000
 e
 
-plot '-' with line
+plot '-' title '' with line
 -100.000000 -243295.000000
 -99.000000 -238486.000000
 -98.000000 -233725.000000
